fix: Update Vercel rewrites to ensure proper routing for non-API requests

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/api/(.*)",
       "destination": "https://streamyplay-backend.onrender.com/api/v1/$1"
+    },
+    {
+      "source": "/((?!api/).*)",
+      "destination": "/index.html"
     }
   ]
 }
